# anchor-zero-copy-example

./: Anchor.toml  README.md  package-lock.json  package.json
programs/zero-copy/: Cargo.toml
programs/zero-copy/src/: lib.rs
tests/: stacksize.ts  withoutzerocopy.ts  zero-copy.ts  zerocopy.ts
